# grabcut_cpp_cli

./: .gitignore  CMakeLists.txt  GrabCutAlgorithm.cpp  GrabCutAlgorithm.hpp  GrabCutEdgeDetection.cpp  GrabCutEdgeDetection.h  GrabCutInterop.cpp  GrabCutInterop.h  README.md  vcpkg.json
.github/workflows/: build.yml
